# configs

./: CMakeLists.txt  CMakePresets.json  README.md  cmake-trace-debug.bat  dependencies.cmake  install-config.bat  install-packages.bat  libs.md  pre-config.bat  run-qt.bat  update-config.bat
cmake/: GenericConfig.cmake.in  copyfiles.cmake  cppcheck.cmake  installpackages.cmake  opencppcoverage.cmake  runtest.bat.in
tests/: CMakeLists.txt  calculator_test.cpp
